28 Aug 2010 Move update_maxrates_hwm() from panel.c and dyngui.c to timer.c to
            correct update of maxrates when daemon mode is enabled without a
            GUI interface being used. Previous maxrates will not be displayed if a 
            prior interval has not occurred. Current maxrates will be displayed
            during shutdown. - Paul Gorlinsky
26 Aug 2010 Add "midnight" option to maxrates. Sets interval to 1440 and 
            curr_int_start_time to the prior midnight. This will cause 
            the maxrates stats to print at midnight. 
            "impl.c" was modified to set curr_int_start_time to the 
            previous midnight if the interval is 1440 minutes. - Paul Gorlinsky
22 Aug 2010 CMPSC-Enhancement Facility with a lot of guessing - Bernard van der Helm
20 Aug 2010 Interlocked-Access Facility - Roger Bowler
16 Aug 2010 Deprecate s37x statement. Use "ldmod s37x" instead - Ivan Warren
11 Aug 2010 Enhance IPL command adding loadparm option. - Paul Gorlinsky
11 Aug 2010 High-Word Facility - Roger Bowler
10 Aug 2010 'qcodepages' added as command to display valid codepages; 'codepage' command 
            enhanced to display the current codepage value, command changed to a PANEL command. 
            Paul Gorlinsky

10 Aug 2010 Population-Count Facility - Roger Bowler
09 Aug 2010 runtime ctl of select S/390 & z insts in S/370 mode - Ivan Warren
09 Aug 2010 Distinct-Operands Facility - Roger Bowler
08 Aug 2010 Allow when building to replace the ESA/390 or z/Architecture
            channel subsystem with S/370 channel I/O.  See README.IOARCH.
            Harold Grovesteen
08 Aug 2010 Load/Store-on-Condition Facility - Roger Bowler
05 Aug 2010 CMDSEP function added. Default is off. The characters 
            '.', '!' and '-' are invalid. Setting the character to a '#'
            could have unexpected results if the command line attempted to
            include a trailing comment.        Paul Gorlinsky