@@ -55,7 +55,7 @@
 /*-------------------------------------------------------------------*/
 void close_faketape (DEVBLK *dev)
 {
-    if(dev->fd>=0)
+    if( dev->fd >= 0 )
     {
         WRMSG (HHC00201, "I", SSID_TO_LCSS(dev->ssid), dev->devnum, dev->filename, "fake");
         close(dev->fd);
@@ -139,14 +139,39 @@ char            pathname[MAX_PATH];     /* file path in host format  */
     hostpath(pathname, dev->filename, sizeof(pathname));
     if(!dev->tdparms.logical_readonly)
     {
-        rc = open (pathname, O_RDWR | O_BINARY);
+        rc = open( pathname, O_RDWR | O_BINARY, 
+                             S_IRUSR | S_IWUSR | S_IRGRP );
+        if ( rc < 0 && !sysblk.noautoinit ) 
+        {
+            rc = open( pathname, O_RDWR | O_BINARY | O_CREAT, 
+                                 S_IRUSR | S_IWUSR | S_IRGRP );
+            if ( rc >= 0 )
+            {
+                int tmp_fd = dev->fd;
+                int ret_code = 0;
+                
+                dev->fd = rc;
+
+                WRMSG( HHC00235, "I", SSID_TO_LCSS(dev->ssid), 
+                       dev->devnum, dev->filename, "fake" );
+                ret_code = write_fakemark( dev, unitstat, code );
+                if ( ret_code >= 0 )
+                    ret_code = write_fakemark( dev, unitstat, code );
+                if ( ret_code < 0 )
+                {
+                    dev->fd = tmp_fd;
+                    rc = ret_code;
+                }
+            }
+        }
+
     }
 
     /* If file is read-only, attempt to open again */
     if (dev->tdparms.logical_readonly || (rc < 0 && (EROFS == errno || EACCES == errno)))
     {
         dev->readonly = 1;
-        rc = open (pathname, O_RDONLY | O_BINARY);
+        rc = open (pathname, O_RDONLY | O_BINARY, S_IRUSR | S_IRGRP );
     }
 
     /* Check for successful open */
