@@ -5,7 +5,7 @@
 /*   (http://www.hercules-390.org/herclic.html) as modifications to  */
 /*   Hercules.                                                       */
 
-// $Id: ftlib.c 6000 2010-05-18 14:30:48Z pgorlinsky $
+// $Id: ftlib.c 433 2010-08-10 04:05:01Z paulgorlinsky $
 
 
 /*-------------------------------------------------------------------*/
@@ -159,7 +159,11 @@ int             oflags;
         {
             return( rc );
         }
+
+        tfetb->created = TRUE;
     }
+    else
+        tfetb->created = FALSE;
 
     /*
     || Reposition tape to load point
